--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npo",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "CLI utility to watch NPO streams in QuickTime Player",
   "main": "index.js",
   "scripts": {
@@ -20,12 +20,14 @@
   },
   "homepage": "https://github.com/kapersoft/npo#readme",
   "dependencies": {
+    "ascii-progress": "^1.0.5",
     "chalk": "^1.1.3",
-    "commander": "^2.9.0",
-    "figlet": "^1.1.2",
-    "shelljs": "^0.7.4",
+    "charm": "^1.0.2",
+    "commander": "^2.11.0",
+    "figlet": "^1.2.0",
+    "request": "^2.81.0",
+    "shelljs": "^0.7.8",
     "sleep": "^4.0.0",
-    "string": "^3.3.1",
-    "sync-request": "^3.0.1"
+    "string": "^3.3.3"
   }
 }
